--- a/package.json
+++ b/package.json
@@ -25,10 +25,6 @@
     "url": "git@github.com:f-o-a-m/foam-hexo-theme-doc.git"
   },
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
     "@rbarilani/parse-template-object": "^1.0.0",
     "cheerio": "^1.0.0-rc.2",
     "clipboard": "^2.0.4",
@@ -57,7 +53,12 @@
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "babel-loader": "^8.0.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bootstrap-sass": "3.4.0",
     "conventional-changelog-cli": "^2.0.11",
     "enzyme": "^3.8.0",
@@ -71,6 +72,7 @@
     "jest-junit": "^6.0.1",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
+    "npm": "^6.6.0",
     "promise-polyfill": "^8.1.0",
     "raf": "^3.4.1",
     "react-test-renderer": "^16.7.0",
@@ -84,8 +86,8 @@
   },
   "babel": {
     "presets": [
-      "@babel/env",
-      "@babel/react"
+      "env",
+      "react"
     ]
   }
 }
